--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/maboiteaspam/showusage/issues"
   },
   "dependencies": {
+    "byline": "^4.2.1",
     "md-stream-utils": "0.0.3",
     "npm": "^2.13.1",
     "resumer": "0.0.0"
