--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "byline": "^4.2.1",
     "glob": "^5.0.14",
+    "inquirer": "^0.9.0",
     "md-stream-utils": "0.0.3",
     "npm": "^2.13.1",
-    "resumer": "0.0.0",
     "through2": "^2.0.0"
   },
   "devDependencies": {
