--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "bin": {
-    "showusage": "./index.js"
+    "showusage": "./bin/index.js"
   },
   "keywords": [
     "cli",
